<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MovieListActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:fontFamily="@font/quicksandbold"
                        android:text="@string/bienvenida"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/quicksandbold"
                        android:text="Hi, Pepe "

                        android:textSize="22sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    >

                    <ImageButton
                        android:id="@+id/perfil"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_margin="25dp"
                        android:background="@color/white"
                        android:src="@drawable/ic_baseline_person_outline_24" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginHorizontal="10dp"
                >


                <LinearLayout
                    android:layout_width="145pt"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="start">

                    <SearchView
                        android:id="@+id/search"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:background="@drawable/navbar"
                        android:backgroundTint="#F9F4FF"
                        android:goIcon="@drawable/ic_baseline_star_24"
                        android:queryHint="Buscar Peliculas"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:orientation="vertical">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:background="@drawable/values"
                        android:src="@drawable/iconnotifi23"
                        />

                </LinearLayout>

            </LinearLayout>


            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="clip_horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal"

                    >

                    <TextView
                        android:clickable="true"
                        android:id="@+id/textViewPopular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="15dp"
                        android:fontFamily="@font/quicksandbold"
                        android:text="@string/popular"
                        android:textColor="@color/activeColor"
                        android:textSize="19sp" />

                    <TextView
                        android:clickable="true"
                        android:id="@+id/textViewRecientes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="15dp"
                        android:fontFamily="@font/quicksandbold"
                        android:text="@string/mas_recientes"
                        android:textColor="@color/textGray"
                        android:textSize="17sp" />

                    <TextView
                        android:clickable="true"
                        android:id="@+id/textViewMejorPuntuación"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="15dp"
                        android:fontFamily="@font/quicksandbold"
                        android:text="@string/mejor_puntuacion"
                        android:textColor="@color/textGray"
                        android:textSize="17sp" />

                    <TextView
                        android:clickable="true"
                        android:id="@+id/textViewProximos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="15dp"
                        android:fontFamily="@font/quicksandbold"
                        android:text="@string/proximos"
                        android:textColor="@color/textGray"
                        android:textSize="17sp" />


                </LinearLayout>

            </HorizontalScrollView>


            <!--    <LinearLayout-->
            <!--        android:layout_width="wrap_content"-->
            <!--        android:layout_height="wrap_content"-->
            <!--        android:orientation="horizontal"-->

            <!--        >-->

            <!--        <LinearLayout-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:orientation="vertical"-->

            <!--            >-->
            <!--        <TextView-->
            <!--            android:layout_width="wrap_content"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:text="Recomendaciones"-->
            <!--            android:textStyle="bold"-->
            <!--            android:textSize="22sp"-->


            <!--            />-->

            <!--        </LinearLayout>-->

            <!--        <LinearLayout-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:orientation="vertical"-->
            <!--            >-->

            <!--        <TextView-->
            <!--            android:layout_width="wrap_content"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:text="Mira Todo"-->
            <!--            android:layout_gravity="end"-->
            <!--            android:textStyle="bold"-->
            <!--            android:gravity="end"-->
            <!--            android:textSize="22sp"-->
            <!--            android:textColor="#df6937"-->


            <!--            />-->
            <!--        </LinearLayout>-->

            <!--    </LinearLayout>-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="#00000000"
                    android:src="@drawable/nointernet"
                    android:visibility="gone" />


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                android:visibility="visible"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="6dp"

                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/recomendaciones"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    >

                    <TextView
                        android:id="@+id/verTodo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|end"
                        android:layout_margin="15dp"
                        android:gravity="end"
                        android:text="@string/ver_todo"
                        android:textColor="#df6937"
                        android:textSize="25sp"
                        android:textStyle="bold" />
                </LinearLayout>


            </LinearLayout>


            <!--            <HorizontalScrollView-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginEnd="5dp"-->
            <!--                android:layout_marginStart="15dp"-->
            <!--                >-->

            <LinearLayout
                android:id="@+id/peli"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="8dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/shadown"
                android:elevation="6dp"
                android:orientation="horizontal"
                android:padding="15dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="151dp"
                        android:layout_marginEnd="18dp"
                        android:backgroundTint="@color/black"
                        android:src="#F8701A" />
                </LinearLayout>


                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:orientation="vertical"
                    app:cardCornerRadius="16dp"

                    >

                    <ImageView
                        android:id="@+id/movie_image_view1"
                        android:layout_width="108dp"
                        android:layout_height="108dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/noimage" />

                </androidx.cardview.widget.CardView>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"

                    android:paddingTop="20dp">

                    <TextView
                        android:id="@+id/titulo"
                        android:layout_width="75pt"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="15dp"
                        android:fontFamily="@font/quicksandbold"
                        android:text="@string/titulo"
                        android:textSize="19sp" />

                    <TextView
                        android:id="@+id/productor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:fontFamily="@font/quicksandbold"
                        android:text="Disney Pixar"
                        android:textSize="19sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|center_vertical"
                        android:layout_marginTop="40dp"
                        android:minWidth="30dp"
                        android:minHeight="30dp"
                        android:src="@drawable/ic_baseline_star_24" />

                    <TextView
                        android:id="@+id/stars"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|center_vertical"
                        android:layout_marginBottom="25dp"
                        android:gravity="center"
                        android:text="0.0"
                        android:textSize="17sp"
                        android:textStyle="bold" />


                </LinearLayout>
            </LinearLayout>

            <!--            </HorizontalScrollView>-->


        </LinearLayout>
    </ScrollView>

</LinearLayout>